--- a/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
@@ -42,7 +42,7 @@ and open the template in the editor.
                 }
                 &:before {
                     font-family: "FontAwesome";
-                    content: "\f101";
+                    content: "\f0da";
                     padding-right: $spacing;
                 }
                 &:hover {
